--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: Your New Jekyll Site
 
 {% include header.html %}
 {% include hero.html %}
-{% include progress.html %}
+{% include growth.html %}
