Add a Staff section + finish .member__info part

--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@ title: Bs4_challenge
 {% include hero.html %}
 {% include growth.html %}
 {% include meet-us.html %}
+{% include staff.html %}
+
+
+{% include dummy-container.html %}
