--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Bs4_challenge
 {% include growth.html %}
 {% include meet-us.html %}
 {% include staff.html %}
+{% include portfolio.html %}
 
 
 {% include dummy-container.html %}
