Add an empty Projects-list section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Bs4_challenge
 {% include meet-us.html %}
 {% include staff.html %}
 {% include portfolio.html %}
+{% include projects-list.html %}
 
 
 {% include dummy-container.html %}
