Add an empty Brands section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Bs4_challenge
 {% include staff.html %}
 {% include portfolio.html %}
 {% include projects-list.html %}
+{% include brands.html %}
 
 
 {% include dummy-container.html %}
