--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: Bs4_challenge
 {% include portfolio.html %}
 {% include projects-list.html %}
 {% include brands.html %}
+{% include logos.html %}
 
 
 {% include dummy-container.html %}
