Add an empty Footer section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: Bs4_challenge
 {% include projects-list.html %}
 {% include brands.html %}
 {% include logos.html %}
+{% include footer.html %}
 
 
 {% include dummy-container.html %}
